...
                context: persistenceController.container.viewContext
            )
        )
    }

    var body: some Scene {
        WindowGroup("ClipSnap", id: "clipboard") {
            ContentView(
                clipboardMonitor: clipboardMonitor,
                screenCaptureService: screenCaptureService,
                cloudSyncMonitor: cloudSyncMonitor
            )
                .environment(\.managedObjectContext, persistenceController.container.viewContext)
...
